[package]
name = "aoc2022"
version = "0.1.0"
edition = "2021"

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
anyhow = "1"
itertools = "0.10"
scan_fmt = "0.2"
regex = "1.7.0"
lazy_static = "1.4.0"
pathfinding = "4.1.1"
ndarray = "0.15.6"
num = "0.4.0"
num-derive = "0.3.3"
num-traits = "0.2.15"
